[gd_scene load_steps=2 format=3 uid="uid://dc5yn3sivx8rh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_r28u0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r28u0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Stats" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
